add dump sql ER-shema

--- a/views/weather/message.html
+++ b/views/weather/message.html
@@ -9,7 +9,7 @@
 <form method="post">
   <div class="form-group">
     <label for="exampleFormControlInput1">Имя</label>
-    <input type="text" class="form-control"  name="name" placeholder="<?=$data['user']['user_name']?>" readonly >
+    <input type="text" class="form-control"  name="name" value="<?=$data['user']['user_name']?>" readonly >
   </div>
   
   
