--- a/views/weather/feedback.html
+++ b/views/weather/feedback.html
@@ -1,8 +1,10 @@
 
 
 <?php if(Session::get('user')) { ?>
-<div class="row" style="margin-top:100px">
+<div class="row" >
   <div class="col-md-6">
+      
+      <h1>Отзывы:</h1>
       
  <?php foreach($data as $feedback): ?>
  
